wiwordik 0.XX 2010-0?-??
   See wiwordik/release_notes.txt

wikokit 0.12.6 2010-0?-??
  common_wiki 234 tests passed, 28 tests failed
  common_wiki 233 tests passed, 29 tests failed
  common_wiki 232 tests passed, 28 tests failed

  common_wiki 225 tests passed, 34 tests failed (wo wikt_parsed)
  common_wiki 219 tests passed, 35 tests failed (wo wikt_parsed)

  Project synarcher was renamed to wikokit.
  New home: code.google.com

  Subproject kleinberg was renamed to hits_wiki.
  The following subprojects were added: common_wiki, wikt_parser, and wiwordik.


Synarcher 0.12.5 2008-04-06
  241 tests passed, 6 tests failed
  This version is devoted to Index Wiki Database (WikIDF) creation.

  WikIDF is a console application (part of Synarcher program), which 
  depends on the RuPOSTagger program, see http://rupostagger.sourceforge.net

  The Wiki Index Database is a list of lemmas and links to wiki pages, 
  which contain these lemmas. The Wiki Index Database now could be 
  created with the help of new upper (or sub) project WikIDF, 
  see synarcher/wikidf/readme.txt

  The created index DB for Russian and Simple English Wikipedia 
  are available at: http://rupostagger.sourceforge.net, 
  see packages idfruwiki and idfsimplewiki.

  Added (from user's point of view)
    Nothing

  Added (from programmer's point of view)
    WikiParsers.java converts wiki-texts to texts in natural language.
    LanguageType.java with list of all Wikipedia languages.
    WikimediaSisterProject.java with codes of Wikimedia sister projects.
    Package wikipedia.sql_idf as API for Wikipedia index database (WikIDF),
        see example in synarcher/wikidf/src/wikidf/ExampleAPI.java.

  Bug fixed
  
  Todo
    Publish a paper about WikIDF.
    Done: see arxiv.org.

Synarcher 0.12.4 2007-09-22
  171 tests passed, 8 tests failed
  Added
    New Category tab was added to search panel. Category tab contains list of 
        categories sorted by number of articles which belongs to it.